-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-lilliput-17
-
Component/s: hotspot
-
generic
-
generic
Some deeper testing shows that the following test is failing:
java/net/httpclient/LineBodyHandlerTest.java
That is caused by that test using DiagnoseSyncOnValueBasedClasses, and that seems currently broken with Lilliput/JDK17 because it sets a plain prototype header on a class, where it should also set the narrow Klass* in the prototype.
java/net/httpclient/LineBodyHandlerTest.java
That is caused by that test using DiagnoseSyncOnValueBasedClasses, and that seems currently broken with Lilliput/JDK17 because it sets a plain prototype header on a class, where it should also set the narrow Klass* in the prototype.