8304329: [Lilliput/JDK17] Fix DiagnoseSyncOnValueBasedClasses

Reviewed-by: shade